--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,9 @@ body{
 .default{
     @apply bg-transparent font-semibold text-base text-primary opacity-40 hover:bg-transparent
 }
+.myBtn{
+    @apply font-bold text-base px-3 py-1 border border-primary rounded-lg text-primary hover:bg-primary hover:text-white
+}
+.inputField{
+    @apply w-full lg:w-96 px-6 py-2 rounded-md bg-accent bg-opacity-20 focus:outline focus:outline-accent
+}
