--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body{
 }
 
 .default{
-    @apply bg-transparent font-semibold text-base text-primary opacity-40 hover:bg-transparent
+    @apply bg-transparent font-semibold text-base text-accent hover:bg-transparent
 }
 .myBtn{
     @apply font-bold text-base px-3 py-1 border border-primary rounded-lg text-primary hover:bg-primary hover:text-white
