--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body{
     @apply bg-transparent font-semibold text-base text-accent hover:bg-transparent
 }
 .myBtn{
-    @apply font-bold text-base px-3 py-1 border border-primary rounded-lg text-primary hover:bg-primary hover:text-white
+    @apply font-bold text-base px-3 py-1 border border-primary rounded-lg text-primary hover:bg-primary hover:text-white disabled:opacity-30 disabled:cursor-not-allowed
 }
 .inputField{
     @apply w-full lg:w-96 px-6 py-2 rounded-md bg-accent bg-opacity-20 focus:outline focus:outline-accent
