--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 }
 
 .myBtn {
-    @apply font-bold text-base px-3 py-1 border border-primary rounded-lg text-primary hover:bg-primary hover:text-white disabled:opacity-30 disabled:cursor-not-allowed
+    @apply  text-base px-3 py-1 border border-primary rounded-lg text-primary hover:bg-primary hover:text-white disabled:opacity-30 disabled:cursor-not-allowed
 }
 
 .inputField {
