Admin user manage user and classes added

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,12 @@ body {
 .myBtn {
     @apply  text-base px-3 py-1 border border-primary rounded-lg text-primary hover:bg-primary hover:text-white disabled:opacity-30 disabled:cursor-not-allowed
 }
+.myBtnSec{
+    @apply  px-3 my-2 py-1 border border-accent rounded-md text-accent hover:bg-accent hover:text-white disabled:opacity-30 disabled:cursor-not-allowed
+}
+.myBtnThr{
+    @apply  px-3 py-1 border border-purple-600 rounded-md text-purple-600 hover:bg-purple-600 hover:text-white disabled:opacity-30 disabled:cursor-not-allowed
+}
 
 .inputField {
     @apply w-full lg:w-96 px-6 py-2 rounded-md bg-accent bg-opacity-20 focus:outline focus:outline-accent
